Added new menu for branch and added label for branch list

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -11,6 +11,8 @@
     "store": "Store",
     "store.storePurchaseRequisitionComponent": "Store Purchase Requisition",
     "store.storePurchaseRequisitionApprovalHODComponent": "Store Purchase Requisition Approval-HOD",
+    "branch": "Branch",
+    "branch.list": "List",
     "material": "Material",
     "material.form-controls": "Form Controls",
     "material.form-controls.autocomplete": "Autocomplete",
@@ -125,6 +127,38 @@
     "confirm_delete": "Confirm delete?",
     "ok": "Ok",
     "close": "Close"
+  },
+  "tableHeader": {
+    "title": "Lokmanya",
+    "sub-title": "Multipurpose Co-Op Society Ltd.",
+    "id": "Sr.No",
+    "name": "Name",
+    "firstName": "First Name",
+    "lastName": "Last Name",
+    "userName": "Username",
+    "designation": "Designation",
+    "branch": "Branch Name",
+    "operation": "Operation",
+    "fullName": "Full Name",
+    "applicantName": "Applicant Name",
+    "lastModified": "Last Modified",
+    "lastModifiedBy": "LastModifiedBy",
+    "branchName": "Branch Name",
+    "branchcode": "Branch Code",
+    "branchType": "Branch Type",
+    "phone": "Phone",
+    "email": "Email",
+    "status": "Status"
+  },
+
+  "tableHeaderOperation": {
+    "delete": "Delete",
+    "add": "Add",
+    "update": "Update",
+    "view": "View",
+    "close": "Close",
+    "ok": "Ok",
+    "confirm_delete": "Confirm Delete"
   },
   "profile": "Profile",
   "edit_profile": "Edit profile",
