Added component for branch form by using this we can add branch

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -177,5 +177,483 @@
   "register_title": "It only takes a few seconds to create your account",
   "read_and_agree": "I have read and agree to the terms of service",
   "have_an_account": "Already have an account",
-  "restore_defaults": "Restore defaults"
+  "restore_defaults": "Restore defaults",
+
+  "atharv": {
+    "title": {
+      "adduser": "Add User",
+      "total": "Total",
+      "date": "Hearing Date",
+      "time": "Hearing Time"
+    },
+    "formlabel": {
+      "applied": "Applied",
+      "adressDetails": "ADDRESS DETAILS",
+      "basicInformationn": "BASIC INFORMATION",
+      "basicDetails": "BASIC DETAILS",
+      "roleResponsibility": "ROLE & RESPONSIBILITY",
+      "credentials": "CREDENTIALS",
+      "ragisteredAddress": "REGISTERED ADDRESS",
+      "identyInformation": "IDENTITY INFORMATION",
+      "personalInfo": "PERSONAL INFORMATION",
+      "basicLoanInfo": "BASIC LOAN INFORMATION",
+      "contactInformationn": "CONTACT INFORMATION",
+      "currentAddress": "CURRENT ADDRESS INFORMATION",
+      "permenentAddress": "PERMANENT ADDRESS INFORMATION",
+      "employeeInfo": "EMPLOYMENT INFORMATION",
+      "employeeAdressInfo": "EMPLOYMENT ADDRESS INFORMATION",
+      "invesmentType": "Investment Type",
+      "invesmentt": "Investment",
+      "invesment": "INVESTMENT",
+      "principal": "PRINCIPAL INCOME",
+      "loanAccountStatus":"Loan Account Status",
+      "loanAccountForeclosure":"Loan Account Foreclosure",
+      "customerId":"Customer ID",
+      "disbursementDate":"Disbursement Date",
+      "memId":"ID",
+      "loanAccountNo":"Loan Account No",
+      "myRelations":"My Relations",
+      "amountofDisbursement":"Amount of Disbursement",
+      "modifiedAmt":"Loan Amount",
+      "loanAmt":"Loan Amount",
+      "loanamount":"Loan Amount",
+      "sanctionAmt":"Sanctioned Amount",
+      "loanDemand":"Loan Demand Amount",
+      "personalDetails": "Personal Details",
+      "loanAmountRecommended":"Recommended Loan Amount ",
+      "applicantDetails": "Primary Applicant",
+      "applicantExistingFacilityDetails": "Applicant Existing Facility",
+      "borrowerExistingFacilityDetails": "Co-Borrower Existing Facility",
+      "applicantassetDetails": "Applicant Asset Details",
+      "borrowerassetDetails": "Co-Borrower Asset Details",
+      "morgagedAssets": "Mortgaged Assets",
+      "existingFacility": "Existing Facility",
+      "amountOfInstallment":"Amount Of Installment",
+      "specify": "Please Specify",
+      "rejected": "Rejected",
+      "Telphone": "Telephone Number",
+      "incometype": "Income Type",
+      "contactpersonName": "Contact Person",
+      "contactpersonmobileNo": "Contact Person Mobile Number",
+      "contactpersonmobile": "Contact Person Mobile",
+      "productType": "Product Type",
+      "bankDetails": "Bank Details",
+      "dhoranName": "Dhoran Name",
+      "startDate": "Start Date",
+      "endDate": "End Date",
+      "url": "Upload File",
+      "reports": "Reports",
+      "loanName": "Loan Name",
+      "decription": "Description",
+      "panCardNo": "PAN",
+      "code": "Code",
+      "draft":"Draft",
+      "taluka": "Taluka",
+      "status": "Status",
+      "year": "Financial Year",
+      "addressType": "Address Type",
+      "houseNo": "House No.",
+      "roadName": "Road Name",
+      "landMark": "Landmark",
+      "panNumber": "PAN",
+      "bankName": "Bank Name",
+      "society": "Society Name",
+      "region": "Region",
+      "zone": "Zone",
+      "branchName": "Branch Name",
+      "branchCode": "Branch Code",
+      "ifsccode": "IFSC Code",
+      "accountType": "Account Type",
+      "parentAccHeadCode": "Parent Account HeadCode",
+      "accHeadCode": "Account HeadCode",
+      "durationstart": "Duration Start",
+      "durationend": "Duration End",
+      "provision": "Provision",
+      "npaclassification": "NPA Classification",
+      "ledgerAccount": "Ledger Account",
+      "accountName": "Account Name",
+      "accountNumber": "Account No.",
+      "configname": "Configuration Name",
+      "configtype": "Configuration Type",
+      "loanaccountnumber": "Loan Account No.",
+      "loantype": "Loan Type",
+      "noofdisburement": "No. Of Disbursement",
+      "dhoran": "Dhoran",
+      "noofinstallment": "No. Of Installment",
+      "resolutionnumber": "Resolution No.",
+      "productname": "Product Name",
+      "interestrate": "Rate of Interest",
+      "validfrom": "Valid From",
+      "validto": "Valid To",
+      "penaltyInterest": "Penalty Interest",
+      "surcharge": "Surcharge",
+      "bankinterestrate": "Bank Interest Rate",
+      "bankborrowingname": "Bank Borrowing Name",
+      "season": "Season",
+      "duration": "Duration(In Months)",
+      "croplimit": "Crop Limit(In Hectare)",
+      "slogan": "Slogan",
+      "memberId": "Member Name",
+      "firstName": "First Name",
+      "lastName": "Last Name",
+      "mobileNo": "Mobile No.",
+      "gender": "Gender",
+      "configName": "Config Name",
+      "configType": "Config Type",
+      "roles": "Role",
+      "organisation": "Society Name",
+      "username": "Username",
+      "password": "Password",
+      "confirmPassword": "Confirm Password",
+      "documentName": "Document Name",
+      "documentDesc": "Document Description",
+      "docType": "Document Type",
+      "isMandatory": "Mandotory",
+      "loanType": "Loan Type",
+      "assetsName": "Asset Name",
+      "assetsType": "Asset Type",
+      "catagory": "Category",
+      "depreciation": "Depreciation",
+      "displayvalue": "Display Value",
+      "value": "Value",
+      "type": "Type",
+      "adduser": "Add User",
+      "registrationNumber": "Registration No.",
+      "societyName": "Society Name",
+      "gstNo": "GST No.",
+      "address": "Address",
+      "tanNo": "TAN No.",
+      "city": "City",
+      "phone": "Mobile No.",
+      "tehsil": "Tehsil",
+      "email": "Email",
+      "district": "District",
+      "state": "State",
+      "pincode": "Pincode",
+      "logo": "Logo",
+      "name": "Name",
+      "designation": "Designation",
+      "electedFrom": "Elected From",
+      "electedTo": "Elected To",
+      "ledgername": "Ledger Name",
+      "accountnumber": "Account No.",
+      "accounttype": "Account Type",
+      "accountheadcode": "Account Headcode",
+      "parentledger": "Parent Ledger",
+      "classification": "Classification",
+      "typechoose": "Please Select The Type",
+      "indapur": "Indapur,Pune",
+      "baramati": "Baramati,Pune",
+      "daund": "Daund,Pune",
+      "bhor": "Bhor,Pune",
+      "haveli": "Haveli,Pune",
+      "shirur": "Shirur,Pune",
+      "maval": "Maval,Pune",
+      "purandar": "Purandar,Pune",
+      "khed": "Khed,Pune",
+      "junner": "Junner,Pune",
+      "mulshi": "Mulshi,Pune",
+      "velha": "Velha,Pune",
+      "ambegaon": "Ambegaon,Pune",
+      "memberName": "Member Name",
+      "cropname": "Crop Name",
+      "gatno": "Gat No.",
+      "landAreaHector": "Land Area(Hector)",
+      "landAreaR": "Land Area(R)",
+      "lattitude": "Lattitude",
+      "logitude": "Logitude",
+      "webSite": "Website",
+      "prodCode": "Product Code",
+      "prodname": "Product Name",
+      "roi": "Rate of Interest",
+      "maxLoanAmt": "Maximum Amount",
+      "maxTenor": "Maximum Tenure",
+      "minTenor": "Minimum Tenure",
+      "emiRounding": "EMI Rounding",
+      "minInstallmentAmount": "Minimum Installment",
+      "maxInstallmentAmount": "Maximum Installment",
+      "description": "Description",
+      "ifscCode": "IFSC Code",
+      "micrCode": "MICR Code",
+      "swiftCode": "SWIFT Code",
+      "ibanCode": "IBAN Code",
+      "isHeadOffice": "Is Head Office? Yes or No",
+      "routingTransitNo": "Transit No.",
+      "fax": "Fax",
+      "branchType": "Branch Type",
+      "orgName": "Society Name",
+      "regNumber": "Registration No.",
+      "pan": "PAN",
+      "gstin": "GST No.",
+      "tan": "TAN",
+      "orgType": "Organisation Type",
+      "regionName": "Region Name",
+      "branch": "Branch Name",
+      "address1": "Address1",
+      "address2": "Address2",
+      "loanAmount": "Demanded Loan Amount",
+      "loanPurpose": "Purpose of Loan",
+      "title": "Title",
+      "middleName": "Middle Name",
+      "membershipNo": "Membership No",
+      "fatherName": "Father Name",
+      "motherName": "Mother Name",
+      "dob": "Date of Birth",
+      "religion": "Religion",
+      "createBank": "Add New Bank Details",
+      "updateBank": "Update Bank Details",
+      "accHolderName": "Account Holder Name",
+      "cast": "Caste",
+      "custCategory": "Category",
+      "maritalStatus": "Marital Status",
+      "familyMember": "No. of Family Members",
+      "noOfDependents": "No. of Dependents",
+      "residenceStatus": "Resident Status",
+      "residenceType":"Residence Type",
+      "occupation": "Occupation",
+      "highestQualification": "Highest Qualification",
+      "aadharCardNo": "Aadhaar Number",
+      "panCard": "PAN",
+      "passportNo": "Passport No.",
+      "passportExpiry": "Passport Expiry Date",
+      "rationCard": "Ration Card",
+      "isborrower": "Do You Have Co-borrower?",
+      "grossIncome": "Gross Income",
+      "expenses": "Deductions",
+      "netIncome": "Net Income",
+      "paidTaxes": "Taxes Paid",
+      "cashSurplus": "Net Cash Surplus",
+      "incomeType": "Status of Existing Facility",
+      "facilityName": "Facility Name",
+      "facilitatedFrom": "Name of Bank/Institution",
+      "nature": "Nature",
+      "amtInLac": "Amount in Rs.",
+      "purpose": "Purpose",
+      "sectionDate": "Date of Sanction",
+      "outstandingInLac": "Outstanding Amount in Rs.",
+      "rating": "Rating",
+      "assetType": "Asset Type",
+      "areaInSqFt": "Area Sq.ft.",
+      "assetCost": "Asset Value",
+      "assetNature": "Asset Nature",
+      "assetOwner": "Asset Owner",
+      "coBorowerName": "Name",
+      "completionYear": "Year of acquisition /Construction",
+      "landType": "Land Type",
+      "landGatNo": "Land Gat No",
+      "landAreaInHector": "Land in Hector",
+      "nationality": "Nationality",
+      "jindagiAmount": "Jindagi Amount",
+      "employerNameAdd": "Name & Address of the Employer",
+      "houseOwner": "House Owner",
+      "soclibilAmt": "Liabilities with our society Amount",
+      "soclibilType": "Society Liabilities Type",
+      "otherlibilAmt": "Liabilities with other Banks/Institutions Amount",
+      "otherlibilType": "Banks/Institutions Liabilities Type",
+      "numberOfAssets": "No. of Assets",
+      "grossAnnualInc": "Gross Annual Income",
+      "branchcode": "Branch Code",
+      "prodName": "Product Name",
+      "docCatagory": "Document Category",
+      "applicationNo": "Application No.",
+      "new": "New",
+      "pending": "Pending",
+      "awaitedforlegal": "Awaited for Legal",
+      "sanctioned": "Sanctioned",
+      "verified": "Verified",
+      "all": "All",
+      "alternateMobile": "Alternate Mobile No.",
+      "loanAccountName": "Loan Account Name",
+      "memberID": "Member ID",
+      "contactTimeFrom": "Prefered Contact time from",
+      "contactTimeTo": "Prefered Contact time to",
+      "addressLine1": "Address Line 1",
+      "addressLine2": "Address Line 2",
+      "addressLine3": "Address Line 3",
+      "freeField1": "Line1",
+      "freeField2": "Line2",
+      "freeField3": "City",
+      "freeField4": "State",
+      "freeField5": "Pin Code",
+      "isPrefferedAdd": "Do You have same Permanent address as above?",
+      "employerName": "Name Of Employer/Company",
+      "membership": "Membership No.",
+      "businessName": "Business Name",
+      "companyAddress": "Address Of Employer/Company",
+      "employmentStatus": "Employment Status",
+      "prevCompanyduration": "Total Years of Experience",
+      "natureOfBusiness": "Nature Of Entity",
+      "industryType": "Industry",
+      "ownership": "Ownership %",
+      "udyamRegistrationNo": "UDYAM Registration No.",
+      "loanApplicationof": "Loan Application Of:",
+      "demandAmount": "Loan Amount",
+      "chooseLoanType": "Choose Loan Type *",
+      "lap": "LAP",
+      "incomeDetails": "Income Details",
+      "Netincome": "Net Income",
+      "taxesPaid": "Taxes Paid",
+      "Expenses": "Expenses",
+      "Incometype": "Income Type",
+      "EmploymentDetails": "Employment Details",
+      "Employername": "Employer Name",
+      "EmployerAddress": "Employer Address",
+      "Orgtype": "Organisation Type",
+      "Industrytype": "Industry Type",
+      "AddressDetails": "Address Details",
+      "Assets": "Assets",
+      "documentsdetails": "DOCUMENT DETAILS",
+      "instruction": "DOCUMENT DETAILS",
+      "documents": "KYC Documents",
+      "loandocuments": "Documents",
+      "memberProfile": "Member Profile :",
+      "memberDetails": "Member Details",
+      "basicInformation": "Member Information",
+      "contactInformation": "Contact Information",
+      "addressInformation": "Address Information",
+      "employmentInformation": "Employment Information",
+      "incomeInformation": "Income Information",
+      "loanApplicationDetails": "Loan Application Details",
+      "loanId": "Loan Id :",
+      "loanStatus": "Loan Status",
+      "MemberId": "Member Id",
+      "DemandAmount": "Amount",
+      "remarks": "Remarks",
+      "loanDetails": "Loan Details",
+      "costOfInvestment": "Cost Of Investment",
+      "mortagagedeedNumber": "Mortagage Deed No.",
+      "extentMortgageValue": "Extent Mortgage Value",
+      "loanBenifitingArea": "Loan Benefiting Area",
+      "downpaymentAmount": "Down Payment Amount",
+      "ltvRatio": "LTV Ratio",
+      "assetDetails": "Asset Details",
+      "coBorrowerDetails": "Co-Borrower Details",
+      "assetAddress": "Asset Address",
+      "assetMarketValue": "Asset Market Value",
+      "assetCompletionYear": "Asset Completion Year",
+      "gurantors": "Guarantor",
+      "fullname": "Full Name",
+      "membershipNumber": "Membership No.",
+      "financialYear": "Financial Year",
+      "deductionExpenses": "Deductions",
+      "netCashSurplus": "Net Cash Surplus",
+      "loanAgreement": "Loan Agreement",
+      "incomeandExpenses": "Income & Expenses",
+      "assets": "Assets",
+      "guarantorsandDeclaration": "Guarantors & Declarations",
+      "confirmation": "Confirmation",
+      "documentVerified": "All Documents & Information is verified.",
+      "remark": "Remark",
+      "authorityComment":"Authority Comment",
+      "reason": "Reason",
+      "done": "Done",
+      "loan": "Loan Application",
+      "weeklysanctionedloan": "Weekly Sanctioned Loan",
+      "listofloan": "List of Loan",
+      "id": "Sr.No.",
+      "loanApplication": "Loan Application",
+      "demandLoanAmount": "Demand Amount",
+      "disbursedAmount": "Disbursed Amount",
+      "applyLoan": "Apply Loan",
+      "today": "Today",
+      "notifications": "Notifications",
+      "footerlabel": "Copyright © 2022-23 Lokmanya | All rights reserved.",
+      "donemsg": "I have filled in all the required information of the user and uploaded his related Documents.\nPlease press Save button after Confirmation.",
+      "donemsgloan": "I have filled in all the required information of the Loan and uploaded his related Documents.\nPlease press Save button after Confirmation.",
+      "donemsgsanction": "I have filled all the required information of the Sanction .\nPlease press Save button after Confirmation.",
+      "department": "Department",
+      "userDetails": "User Details",
+      "contact": "Contact",
+      "docName": "Document Name",
+      "age": "Age",
+      "BLicenceNo": "Business Registration/Licence No.",
+      "NatureOfBusiness": "Nature Of Business",
+      "employeeId": "Employee Id",
+      "listofloantype": "List of Loan Type",
+      "branchwiseloancount": "Branch wise Loan Count",
+      "totalActiveLoan": "Total Active Loan",
+      "activeLoanamount": "Active Loan Amount",
+      "totalNewLoan": "Total New Loan",
+      "newLoanLoanamount": "New Loan Amount",
+      "loanTypeName": "Loan Type Name",
+      "totalLoan": "Total Loan",
+      "refId": "Reference Id",
+      "docsubType": "Document Sub Type",
+      "selectproduct": "Select Product",
+      "selectcolor": "Select Color",
+      "selectitems": "Select Items",
+      "curremply": "Current Employee Since",
+      "homebranch": "Home Branch",
+      "year1": "YYYY-YYYY",
+      "memberIDmembershipNo": "MemberID/MembershipNo",
+      "aadharCardNoPanNumber": "PAN",
+      "officeTelNo": "Office Tel.No",
+      "viewAsset": "View Asset",
+      "otherCast": "If Other Cast, please specify",
+      "OtherAssetNature": "If Other, please specify",
+      "viewBank": "View Bank Details",
+      "note": "Note: Please read the below guidelines and upload all the relevant and correct documents against each document name Guidelines:",
+      "note1": "To replace a document, please delete the original document and upload the new document",
+      "note2": " If any document is verified by Us then it cannot be replaced.",
+      "photograph": "Photograph & Signature (Applicant)",
+      "coPhotograph": "Photograph & Signature ",
+      "cophotonote": "Co-Borrower",
+      "Identification": "Identification (Applicant)",
+      "identification": "Identification",
+      "uploadmsg": "Upload scanned images of the following documents.File size must be less than 4MB. Maximum files upload limit: up to 1 at one time.",
+      "uploadmsgnote": "Note: Please read the above guidelines and upload all the relevant and correct documents against each document name.",
+      "Supportednote": "Supported file types:JPG, PDF, PNG, JPEG",
+      "assetCosts":"Total Cost of all assets",
+      "assetCostsmorgated":"Total cost of all morgated assets",
+      "Monthlyemi":"EMI Amount",
+      "otherType":"Other Type",
+      "income":"Income"
+
+    },
+
+    "button": {
+      "save": "Save",
+      "cancel": "Cancel",
+      "back": "Back",
+      "update": "Update",
+      "delete": "Delete",
+      "exporttoexcel": "Export To Excel",
+      "search": "Search",
+      "reset": "Reset",
+      "create": "Create",
+      "addRegion": "Add Region",
+      "addBranch": "Add Branch",
+      "addSociety": "Add Society",
+      "addParameter": "Add Parameter",
+      "addUser": "Add User",
+      "updateSociety": "Update Society",
+      "createSociety": "Create Society",
+      "updateRegion": "Update Region",
+      "createRegion": "Create Region",
+      "updateBranch": "Update Branch",
+      "createBranch": "Create Branch",
+      "createParameter": "Create Parameter",
+      "updateParameter": "Update Parameter",
+      "createProduct": "Create Product",
+      "updateProduct": "Update Product",
+      "addloanProduct": "Add Loan Product",
+      "addPrerequisite": "Add Pre-Requisite",
+      "applyLoan": "Apply Loan",
+      "addMember": "Add Member",
+      "addAsset": "Add Asset",
+      "createUser": "Create User",
+      "updateUser": "Update User",
+      "addiconconfig": "Add Icon",
+      "createicon": "Add Icon",
+      "updateicon": "Update Icon",
+      "addBank": "Add Bank Details",
+      "updatePrerequisiteDetails": "Update Prerequisite Details",
+      "createPrerequisiteDetails": "Create Prerequisite Details",
+      "updateAsset": "Update Asset",
+      "createAsset": "Create Asset",
+      "updateBank": "Update Bank Details",
+      "createBank": "Add Bank Details",
+      "submit":"Submit"
+    }
+  }
 }
