--- a/src/assets/i18n/mr-IN.json
+++ b/src/assets/i18n/mr-IN.json
@@ -161,6 +161,400 @@
     "ok": "Ok",
     "close": "Close"
   },
+  "atharv": {
+    "title": {
+      "createSociety": "संस्था तयार करा",
+      "adduser": "युजर तयार करा",
+      "total": "एकूण",
+      "date": "सुनावणीची तारीख",
+      "time": "सुनावणीची वेळ"
+    },
+    "formlabel": {
+      "rejected": "रद्द",
+      "adressDetails": "पत्ता तपशील",
+      "basicInformationn": "मुलभूत माहिती",
+      "ragisteredAddress": "नोंदणीकृत पत्ता",
+      "basicDetails": "मूलभूत तपशील",
+      "personalInfo": "वैयक्तिक माहिती",
+      "basicLoanInfo": "मूलभूत कर्ज माहिती",
+      "prodname": "लोन प्रॉडक्ट नांव",
+      "roleResponsibility": "भूमिका आणि जबाबदारी",
+      "identyInformation": "ओळख माहिती",
+      "contactInformationn": "संपर्क माहिती",
+      "currentAddress": "वर्तमान पत्ता माहिती",
+      "permenentAddress": "कायमस्वरूपी पत्ता माहिती",
+      "employeeInfo": "रोजगार माहिती",
+      "employeeAdressInfo": "रोजगार पत्ता माहिती",
+      "credentials": "क्रेडेन्शियल्स",
+      "invesmentType": "गुंतवणुकीचा प्रकार",
+      "invesmentt": "गुंतवलेली रक्कम",
+      "invesment": "गुंतवलेली रक्कम",
+      "principal": "मुख्य उत्पन्न",
+      "createicon":"लोगो तयार करा",
+      "loanAccountNo":"कर्ज खाते नंबर",
+      "updateicon":"लोगो अपडेट करा",
+      "viewIconConfig":"आयकॉन कॉन्फिगरेशन पहा",
+      "selectproduct":"लोन प्रॉडक्टचा प्रकार निवडा",
+      "selectcolor":"रंग निवडा",
+      "selectitems":"आयटम निवडा",
+      "productType":"लोन प्रॉडक्टचा प्रकार",
+      "customerId":"ग्राहक क्रमांक",
+      "disbursementDate":"वितरण तारीख",
+      "memId":"क्रमांक",
+      "loandocuments":"आवश्यक कागदपत्रे",
+      "morgagedAssets":"मालमत्ता तारण",
+      "applicantDetails": "प्रायमरी अँप्लिकेन्ट",
+      "coBorrowerDetails":"सह-कर्जदार तपशील",
+      "existingFacility":"एक्सिस्टिंग फॅसिलिटी",
+      "myRelations":"माय रेलेशन्स",
+      "docsubType": "दस्तऐवज उप प्रकार",
+      "contactpersonName": "संपर्क व्यक्तीचे नाव",
+      "contactpersonmobileNo": "संपर्क व्यक्तीचा मोबाईल नंबर",
+      "taluka": "तालुका",
+      "reports": "अहवाल",
+      "addressType": "पत्त्याचा प्रकार",
+      "houseNo": "घर क्रमांक",
+      "roadName": "रस्त्याचे नाव",
+      "landMark": "लँडमार्क",
+      "slogan": "ब्रीद वाक्य",
+      "configName": "कॉन्फिगरेशन नाव",
+      "configType": "कॉन्फिगरेशन प्रकार",
+      "documentName": "कागदपत्राचे नाव",
+      "documentDesc": "कागदपत्राचे वर्णन",
+      "parentAccHeadCode": "पॅरेण्ट अकाउंट हेडकोड",
+      "accHeadCode": "अकाउंट हेडकोड",
+      "docType": "दस्तऐवज प्रकार",
+      "mandatory": "अनिवार्य",
+      "loanType": "कर्जाचा प्रकार",
+      "assetsName": "मालमत्तेचे नाव",
+      "assetsType": "मालमत्ता प्रकार",
+      "catagory": "श्रेणी",
+      "depreciation": "घसारा",
+      "displayvalue": "प्रदर्शन मूल्य",
+      "value": "मूल्य",
+      "type": "प्रकार",
+      "name": "नाव",
+      "designation": "पदनाम",
+      "electedFrom": "निवडून आलेली तारीख",
+      "electedTo": "अंतिम तारीख",
+      "ledgername": "लेजरचे नाव",
+      "accountnumber": "खाते क्रमांक",
+      "accounttype": "खाते प्रकार",
+      "accountheadcode": "खाते हेडकोड",
+      "parentledger": "पालक खातेवही",
+      "adduser": "युजर तयार करा",
+      "classification": "वर्गीकरण",
+      "registrationNumber": "रेजिस्ट्रेशन नंबर",
+      "societyName": "संस्थेचे नाव",
+      "gstNo": "जीएसटी नंबर",
+      "address": "पत्ता",
+      "tanNo": "टॅन",
+      "village": "गाव",
+      "tehsil": "तहसील",
+      "email": "ईमेल",
+      "panNumber": "पॅन",
+      "phoneNumber": "फोन नंबर",
+      "district": "जिल्हा",
+      "state": "राज्य",
+      "pincode": "पिन कोड",
+      "logo": "लोगो",
+      "typechoose": "कृपया प्रकार निवडा",
+      "indapur": "इंदापूर, पुणे",
+      "baramati": "बारामती, पुणे",
+      "daund": "दौंड, पुणे",
+      "bhor": "भोर, पुणे",
+      "haveli": "हवेली, पुणे",
+      "shirur": "शिरूर, पुणे",
+      "maval": "मावळ, पुणे",
+      "purandar": "पुरंदर, पुणे",
+      "khed": "खेड, पुणे",
+      "junner": "जुन्नर, पुणे",
+      "mulshi": "मुळशी, पुणे",
+      "velha": "वेल्हा, पुणे",
+      "ambegaon": "आंबेगाव, पुणे",
+      "memberName": "सदस्याचे नाव",
+      "cropname": "पिकाचे नाव",
+      "gatno": "गट नंबर",
+      "landAreaHector": "जमिनीचे क्षेत्रफळ(हेक्टर)",
+      "landAreaR": "जमिनीचे क्षेत्रफळ(आर)",
+      "orgType": "संस्थेचा प्रकार निवडा",
+      "description": "वर्णन",
+      "phone": "फोन नंबर",
+      "address1": "पत्ता लाईन १",
+      "address2": "पत्ता लाईन २",
+      "city": "शहर",
+      "region": "रिजन ",
+      "regionName": "रिजनचे नाव",
+      "branchCode": "शाखा कोड",
+      "branchName": "शाखेचे नाव",
+      "branchType": "शाखा प्रकार निवडा",
+      "firstName": "पहिले नाव",
+      "lastName": "आडनाव",
+      "mobileNo": "मोबाइल नंबर",
+      "roles": "रोल",
+      "confirmPassword": "पासवर्डची पुष्टी करा",
+      "username": "युजरनेम",
+      "password": "पासवर्ड",
+      "prodCode": "लोन प्रॉडक्ट कोड",
+      "productname": "लोन प्रॉडक्ट चे नाव",
+      "roi": "व्याज दर",
+      "minInstallmentAmount": "किमान हप्त्याची रक्कम",
+      "maxInstallmentAmount": "कमाल इन्स्टॉलमेंट रक्कम",
+      "maxTenor": "कमाल कर्ज मुदत",
+      "minTenor": "किमान कर्ज मुदत",
+      "loanAmount": "कर्जाची रक्कम मागितली",
+      "loanPurpose": "कर्जाचा उद्देश",
+      "title": "शीर्षक",
+      "middleName": "मधले नाव",
+      "membershipNo": "सदस्यत्व नंबर",
+      "fatherName": "वडीलांचे नावं",
+      "motherName": "आईचे नाव",
+      "gender": "लिंग",
+      "dob": "जन्मतारीख",
+      "nationality": "राष्ट्रीयत्व",
+      "religion": "धर्म",
+      "cast": "जात",
+      "custCategory": "वर्ग",
+      "maritalStatus": "वैवाहिक स्टेटस",
+      "familyMember": "कुटुंबातील सदस्यांची संख्या",
+      "noOfDependents": "अवलंबितांची संख्या",
+      "residenceStatus": "निवास स्टेटस",
+      "occupation": "व्यवसाय",
+      "highestQualification": "सर्वोच्च पात्रता",
+      "aadharCardNo": "आधार कार्ड नंबर",
+      "panCard": "पॅन कार्ड",
+      "passportNo": "पासपोर्ट नंबर",
+      "passportExpiry": "पासपोर्ट कालबाह्यता तारीख",
+      "rationCard": "शिधापत्रिका क्रमांक",
+      "isborrower": "सह-कर्जदार",
+      "year": "आर्थिक वर्ष",
+      "grossIncome": "एकूण उत्पन्न",
+      "expenses": "वजावट",
+      "netIncome": "निव्वळ उत्पन्न",
+      "paidTaxes": "भरलेला कर",
+      "cashSurplus": "निव्वळ रोख अधिशेष",
+      "incomeType": "उत्पन्नाचा प्रकार",
+      "facilityName": "सुविधेचे नाव",
+      "facilitatedFrom": "बँकेचे नाव /इतर",
+      "nature": "नेचर",
+      "amtInLac": "रक्कम",
+      "purpose": "उद्देश",
+      "sectionDate": "मंजुरीची तारीख",
+      "outstandingInLac": "थकबाकी रक्कम",
+      "status": "स्टेटस",
+      "rating": "रेटिंग",
+      "assetType": "मालमत्ता प्रकार",
+      "areaInSqFt": "क्षेत्रफळ चौ. फूट./ मीटर",
+      "assetCost": "मालमत्ता खर्च",
+      "assetNature": "मालमत्ता प्रकार",
+      "assetOwner": "मालमत्ता मालक",
+      "completionYear": "वर्ष",
+      "landType": "जमीन प्रकार",
+      "landGatNo": "गट क्रमांक",
+      "landAreaInHector": "हेक्टर मध्ये जमीन क्षेत्र",
+      "jindagiAmount": "जिंदगी रक्कम",
+      "employerNameAdd": "कर्मचारी नाव आणि पत्ता",
+      "houseOwner": "घरमालक",
+      "soclibilAmt": "सोसायटी दायित्व रक्कम",
+      "soclibilType": "सोसायटी दायित्व प्रकार",
+      "otherlibilAmt": "इतर दायित्व रक्कम",
+      "otherlibilType": "इतर दायित्व प्रकार",
+      "numberOfAssets": "मालमत्तेची संख्या",
+      "grossAnnualInc": "एकूण वार्षिक उत्पन्न",
+      "branchcode": "शाखा कोड",
+      "orgName": "सोसायटीचे नाव",
+      "regNumber": "रेजिस्ट्रेशन नंबर",
+      "emiRounding": "ईएमआय राउंडिंग",
+      "prodName": "प्रॉडक्टचे नाव",
+      "docCatagory": "दस्तऐवज श्रेणी",
+      "applicationNo": "अर्ज क्रमांक",
+      "new": "नवीन",
+      "draft":" ड्राफ्ट",
+      "pending": "प्रलंबित",
+      "awaitedforlegal": "प्रतीक्षेत",
+      "sanctioned": "मंजूर",
+      "all": "सर्व",
+      "loanAccountName": "कर्ज खात्याचे नाव",
+      "loanNpaClass": " एनपीए वर्गीकरण",
+      "memberID": "सभासद क्रमांक",
+      "alternateMobile": "पर्यायी मोबाइल नंबर",
+      "contactTimeFrom": "पसंतीची संपर्क वेळपासून",
+      "contactTimeTo": "प्राधान्य दिलेली संपर्क वेळपर्यंत",
+      "addressLine1": "पत्ता लाईन १",
+      "addressLine2": "पत्ता लाईन २",
+      "addressLine3": "पत्ता लाईन ३",
+      "freeField1": "पत्ता १",
+      "freeField2": "पत्ता २",
+      "freeField3": "शहर",
+      "freeField4": "राज्य",
+      "freeField5": "पिन कोड",
+      "isPrefferedAdd": "तुमचा सध्याचा पत्ता कायमचा आहे का?",
+      "employerName": "नियोक्ता/कंपनीचे नाव",
+      "businessName": "व्यवसायाचे नाव",
+      "companyAddress": "नियोक्ता/कंपनीचा पत्ता",
+      "employmentStatus": "रोजगार स्टेटस",
+      "prevCompanyduration": "एकूण वर्षांचा अनुभव",
+      "natureOfBusiness": "व्यवसायाचे स्वरूप",
+      "industryType": "उद्योग",
+      "ownership": "मालकी %",
+      "udyamRegistrationNo": "उद्यम रेजिस्ट्रेशन नंबर",
+      "loanApplicationof": "अर्जदार नाव: ",
+      "demandAmount": "कर्जाची रक्कम",
+      "chooseLoanType": "कर्जाचा प्रकार निवडा",
+      "incomeDetails": "उत्पन्नाचा तपशील",
+      "Netincome": "निव्वळ उत्पन्न",
+      "taxesPaid": "भरलेला कर",
+      "Expenses": "खर्च",
+      "incometype": "उत्पन्नाचा प्रकार",
+      "EmploymentDetails": "रोजगार तपशील",
+      "Employername": "नियोक्त्याचे नाव",
+      "EmployerAddress": "नियोक्त्याचा पत्ता",
+      "Orgtype": "संस्थेचा प्रकार",
+      "Industrytype": "उद्योग प्रकार",
+      "AddressDetails": "पत्ता तपशील",
+      "Assets": "मालमत्ता",
+      "documents": "आवश्यक कागदपत्रे",
+      "memberProfile": "सदस्य प्रोफाइल :",
+      "memberDetails": "सदस्य तपशील",
+      "basicInformation": "सदस्य माहिती",
+      "contactInformation": "संपर्क माहिती",
+      "addressInformation": "पत्ता माहिती",
+      "employmentInformation": "रोजगार माहिती",
+      "incomeInformation": "उत्पन्न माहिती",
+      "loanApplicationDetails": "कर्ज अर्ज तपशील",
+      "loanId": "कर्ज आयडी",
+      "loanStatus": "कर्जाची स्टेटस",
+      "MemberId": "सदस्य आयडी",
+      "DemandAmount": "मागणी केलेली कर्ज रक्कम",
+      "remarks": "शेरा",
+      "loanDetails": "कर्ज तपशील",
+      "costOfInvestment": "गुंतवणुकीची किंमत",
+      "mortagagedeedNumber": "तारण करार क्रमांक",
+      "extentMortgageValue": "मर्यादा गहाण मूल्य",
+      "loanBenifitingArea": "कर्ज लाभक्षेत्र",
+      "downpaymentAmount": "डाउन पेमेंट रक्कम",
+      "ltvRatio": "एलटीवी प्रमाण",
+      "assetDetails": "मालमत्ता तपशील",
+      "assetAddress": "मालमत्ता पत्ता",
+      "assetMarketValue": "मालमत्ता बाजार मूल्य",
+      "assetCompletionYear": "मालमत्ता पूर्ण करण्याचे वर्ष",
+      "gurantors": "जामिनदार ",
+      "fullname": "संपूर्ण  नाव",
+      "membershipNumber": "सदस्यत्व क्रमांक",
+      "financialYear": "आर्थिक वर्ष",
+      "deductionExpenses": "वजावट",
+      "netCashSurplus": "निव्वळ रोख अधिशेष",
+      "loanAgreement": "कर्ज करार",
+      "incomeandExpenses": "उत्पन्न आणि खर्च",
+      "assets": "मालमत्ता",
+      "guarantorsandDeclaration": "जामिनदार आणि घोषणा",
+      "confirmation": "पुष्टीकरण",
+      "documentVerified": "सर्व कागदपत्रे आणि माहिती सत्यापित आहे",
+      "remark": "शेरा",
+      "reason": "कारण",
+      "done": "पूर्ण झाले",
+      "loan": "कर्ज",
+      "weeklysanctionedloan": " साप्ताहिक मंजूर कर्ज",
+      "listofloan": "कर्जाची यादी",
+      "id": "नंबर",
+      "loanApplication": "कर्ज अर्ज",
+      "demandLoanAmount": "मागणी केलेली कर्ज रक्कम",
+      "disbursedAmount": "वितरित रक्कम",
+      "applyLoan": "कर्जासाठी अर्ज करा",
+      "today": "आज",
+      "notifications": "सूचना",
+      "footerlabel": "कॉपीराइट © २०२२-२३ लोकमान्य | सर्व हक्क राखीव.",
+      "donemsg": "आशा आहे की तुम्ही सर्व आवश्यक माहिती भरली असेल. कृपया पुष्टीकरणानंतर सेव्ह बटण दाबा",
+      "donemsgsanction": "आशा आहे की तुम्ही सर्व आवश्यक माहिती भरली असेल. कृपया पुष्टीकरणानंतर सेव्ह बटण दाबा.",
+      "department": "विभाग",
+      "userDetails": "युजर तपशील",
+      "contact": "संपर्क",
+      "society": "सोसायटी",
+      "docName": "कागदपत्राचे नाव",
+      "age": "वय",
+      "employeeId": "कर्मचारी आयडी",
+      "listofloantype": "कर्जाच्या प्रकाराची यादी",
+      "branchwiseloancount": "शाखाप्रमाणें कर्जाची संख्या",
+      "totalActiveLoan": "एकूण सक्रिय कर्ज",
+      "activeLoanamount": "सक्रिय कर्जाची रक्कम",
+      "totalNewLoan": "एकूण नवीन कर्ज",
+      "newLoanLoanamount": "नवीन कर्जाची रक्कम",
+      "loanTypeName": "कर्जाच्या प्रकाराचे नाव",
+      "totalLoan": "एकूण कर्ज",
+      "refId": "संदर्भ नंबर",
+      "curremply": "सध्या कर्मचारी (पासून)",
+      "verified": "पडताळणी पूर्ण अर्ज ",
+      "homebranch": "होम ब्रँच",
+      "year1": " वर्ष-वर्ष",
+      "memberIDmembershipNo": "सदस्य आयडी/सदस्यत्व क्रमांक",
+      "aadharCardNoPanNumber": "पॅन",
+      "Telphone": "टेलीफोन नंबर",
+      "viewAsset": "मालमत्ता पहा",
+      "otherCast": "इतर जात असल्यास कृपया नोंद करा",
+      "OtherAssetNature": "इतर असल्यास, कृपया नोंद करा",
+      "weencloseherewith": "आम्ही यासह जोडत आहोत",
+      "bankDetails": "बँक तपशील",
+      "viewBank": "बँक तपशील पहा",
+      "note": "टीप: कृपया खालील मार्गदर्शक तत्त्वे वाचा आणि सर्व संबंधित आणि योग्य कागदपत्रे अपलोड करा प्रत्येक दस्तऐवज नावाच्या मार्गदर्शक:",
+      "note1": "दस्तऐवज बदलण्यासाठी, कृपया मूळ दस्तऐवज हटवा आणि नवीन दस्तऐवज अपलोड करा",
+      "note2": "आमच्याद्वारे कोणतेही दस्तऐवज सत्यापित केले असल्यास ते बदलले जाऊ शकत नाही.",
+      "photograph": "छायाचित्र आणि स्वाक्षरी (अर्जदार)",
+      "coPhotograph": "छायाचित्र आणि स्वाक्षरी",
+      "cophotonote": "सह-कर्जदार",
+      "Identification": "ओळख (अर्जदार)",
+      "identification": "ओळख",
+      "uploadmsg": "खालील कागदपत्रांच्या स्कॅन केलेल्या प्रतिमा अपलोड करा. अनुमत स्वरूप: .jpg फाइल आकार आवश्यक आहे असणे 10MB पेक्षा कमी. कमाल फाइल अपलोड मर्यादा: एका वेळी 1 पर्यंत.",
+      "uploadmsgnote": "टीप: कृपया वरील मार्गदर्शक तत्त्वे वाचा आणि प्रत्येक दस्तऐवजाच्या नावाविरुद्ध सर्व संबंधित आणि योग्य कागदपत्रे अपलोड करा.",
+      "Supportednote": "समर्थित फाइल प्रकार: PDF, PNG, JPEG",
+      "instruction": "माहिती",
+      "documentsdetails": "कागदपत्रे माहिती",
+      "Monthlyemi":"ईएमआय रक्कम",
+      "otherType":"इतर प्रकार",
+      "income":"उत्पन्न",
+      "residenceType":"निवास प्रकार"
+
+    },
+    "button": {
+      "save": "सेव करा",
+      "cancel": "रद्द करा",
+      "back": "मागे",
+      "update": "बदल करा",
+      "delete": "हटवा",
+      "addRegion": "रिजन ॲड करा",
+      "addBranch": "शाखा तयार करा",
+      "addSociety": "सोसायटी तयार करा",
+      "addParameter": "पॅरामीटर तयार करा",
+      "addProduct": "उत्पादन तयार करा",
+      "search": "सर्च",
+      "reset": "रीसेट करा",
+      "addUser": "सदस्य ॲड करा",
+      "updateSociety": "सोसायटी अपडेट करा",
+      "createSociety": "सोसायटी तयार करा",
+      "updateRegion": "रिजन अपडेट करा ",
+      "createRegion": "रिजन ॲड करा",
+      "updateBranch": "शाखा अपडेट करा",
+      "createBranch": "शाखा तयार करा",
+      "updateUser": "सदस्य अपडेट करा",
+      "createParameter": "पॅरामीटर तयार करा",
+      "updateParameter": "पॅरामीटर अपडेट करा",
+      "addloanProduct": "लोन प्रॉडक्ट ॲड करा",
+      "createProduct": "लोन प्रॉडक्ट ॲड करा",
+      "updateProduct": "लोन प्रॉडक्टअपडेट करा",
+      "addPrerequisite": "पूर्वतयारी तयार करा",
+      "applyLoan": "कर्जासाठी अर्ज करा",
+      "addMember": "सदस्य ॲड करा",
+      "addAsset": "मालमत्ता तयार करा",
+      "addiconconfig": "लोगो तयार करा",
+      "updateBank": "बँक डिटेल्स अपडेट करा",
+      "createBank": " नवीन बँक डिटेल्स तयार करा",
+      "addBank": "बँक डिटेल्स तयार करा",
+      "submit":"सबमिट",
+      "createicon":"लोगो तयार करा",
+      "updateicon":"लोगो अपडेट करा",
+      "viewIconConfig":"आयकॉन कॉन्फिगरेशन पहा"
+
+    }
+  },
   "profile": "प्रोफाइल",
   "edit_profile": "प्रोफाईल संपादित करा",
   "logout": "बाहेर पडणे",
