Added two more component in user module for showing existing user list and another one for adding new user

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -12,7 +12,7 @@
     "store.storePurchaseRequisitionComponent": "Store Purchase Requisition",
     "store.storePurchaseRequisitionApprovalHODComponent": "Store Purchase Requisition Approval-HOD",
     "branch": "Branch",
-    "branch.list": "List",
+    "user": "User",
     "material": "Material",
     "material.form-controls": "Form Controls",
     "material.form-controls.autocomplete": "Autocomplete",
